<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:showAsAction="ifRoom"/>

    <item android:id="@+id/deleteAll"
        android:title="@string/delete_all"/>

    <item android:id="@+id/taskList"
        android:title="@string/task_lists"/>

    <item android:id="@+id/addBatchNotes"
        android:title="@string/add_in_batch_mode"/>

    <item android:id="@+id/removeAds"
        android:title="@string/remove_ads"/>

    <item android:id="@+id/moreApps"
        android:title="@string/more_apps"/>

    <item android:id="@+id/feedback"
        android:title="@string/send_feedback"/>

    <item android:id="@+id/followUs"
        android:title="@string/follow_us"/>

    <item android:id="@+id/invite_friends"
        android:title="@string/invite_friends_to_the_app"/>

    <item android:id="@+id/settings"
        android:title="@string/settings"/>

</menu>