<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="7dp">


    <androidx.cardview.widget.CardView
        style="@style/style_CardView">

        <LinearLayout
            android:id="@+id/myLayout"
            style="@style/linearLayout"
            android:paddingEnd="3dp">


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/eventEntered"
                android:text="@string/the_occured_event"
                android:textSize="20sp"
                android:paddingEnd="15dp"
                style="@style/CardView_Style"
                tools:ignore="RtlSymmetry" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/desc"
                android:text="@string/the_desc"
                android:textSize="16sp"
                android:paddingEnd="15dp"
                style="@style/CardView_Style"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CardView_Style"
                android:id="@+id/date"
                android:text="@string/date_created"
                android:paddingEnd="15dp"
                android:textSize="14sp"/>

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/CardView_Style"
                android:id="@+id/time"
                android:text="@string/time"
                android:paddingEnd="15dp"
                android:textSize="14sp"/>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>