<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".AddNew">

    <androidx.appcompat.widget.AppCompatTextView

        android:id="@+id/appCompatTextView"
        style="@style/TitleBox"
        android:text="@string/title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/titleEdit"
        style="@style/EditBox"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_the_title"
        android:maxLines="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        style="@style/TitleBox"
        android:layout_marginTop="24dp"
        android:text="@string/task_description"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleEdit"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/descEdit"
        style="@style/EditBox"
        android:layout_marginTop="8dp"
        android:hint="@string/enter_the_task_description"
        android:maxLines="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView3"
        style="@style/TitleBox"
        android:layout_marginTop="24dp"
        android:text="@string/date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/descEdit"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dateEdit"
        style="@style/DateTimeBox"
        android:layout_marginTop="8dp"
        android:hint="@string/dd_mm_yyyy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView4"
        style="@style/TitleBox"
        android:layout_marginTop="24dp"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dateEdit"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/timeEdit"
        style="@style/DateTimeBox"
        android:layout_marginTop="8dp"
        android:hint="@string/hh_mm_ss"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnCalendar"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_btn_calendar"
        android:src="@drawable/ic_baseline_calendar_month_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dateEdit"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView3"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnTime"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_btn_calendar"
        android:src="@drawable/ic_baseline_access_time_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/timeEdit"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView5"
        style="@style/TitleBox"
        android:layout_marginTop="24dp"
        android:text="@string/repeat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeEdit"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/activity_dropdownList"
        style="@style/DateTimeBox"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5"
        app:layout_constraintVertical_bias="0.0" />


    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnSave"
        style="@style/SaveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/activity_dropdownList"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView5"
        app:layout_constraintVertical_bias="0.49" />

</androidx.constraintlayout.widget.ConstraintLayout>