<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".fragments.CreateNew">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/inputData_text"
        style="@style/Heading_Style"
        android:layout_marginTop="32dp"
        android:text="@string/what_is_to_be_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/appCompatEditText"
        style="@style/TaskBox"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputData_text"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dueDate_text"
        style="@style/Heading_Style"
        android:layout_marginBottom="32dp"
        android:text="@string/due_date"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appCompatEditText"
        app:layout_constraintVertical_bias="0.100000024" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dueDate_box"
        style="@style/Date_Time_Box"
        android:layout_marginTop="32dp"
        android:hint="@string/hint_setDate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dueDate_text"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_calendar"
        style="@style/btn_image_calendar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@id/dueDate_box"
        app:layout_constraintTop_toBottomOf="@id/appCompatEditText"
        app:layout_constraintVertical_bias="0.203" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/timeText_box"
        style="@style/Heading_Style"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:text="@string/time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dueDate_box"
        app:layout_constraintVertical_bias="0.050000012" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/timeBox_Data"
        style="@style/Date_Time_Box"
        android:layout_marginBottom="32dp"
        android:hint="@string/set_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeText_box"

        app:layout_constraintVertical_bias="0.0" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_time"
        style="@style/btn_image_time"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.65"
        app:layout_constraintStart_toEndOf="@id/timeBox_Data"
        app:layout_constraintTop_toBottomOf="@id/btn_calendar"
        app:layout_constraintVertical_bias="0.243" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/repeatBox"
        style="@style/Heading_Style"
        android:text="@string/repeat"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeBox_Data"
        app:layout_constraintVertical_bias="0.0"/>

    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/fragment_dropdownList"
        style="@style/fragment_dropDownList"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/repeatBox"
        app:layout_constraintVertical_bias="0.066" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btn_save"
        style="@style/SaveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_dropdownList"/>


</androidx.constraintlayout.widget.ConstraintLayout>